<resources>
    <string name="app_name">Hunters Net 2.0</string>

    <string name="auth_tv_text">Authorization</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register_tv_text">Create account</string>
    <string name="forgotpassword_tv_text">Forgot Password</string>
    <string name="login_btn_text">Log In</string>

    <string name="ca_tv_text">Create Account</string>
    <string name="ca_email_hint">Email</string>
    <string name="ca_password_hint">Password</string>
    <string name="ca_btn_text">Create Account</string>
    <string name="ca_displayname_hint">Display Name</string>
    <string name="ca_register_tv_text">Create Account</string>
    <string name="ca_forgotpassword_tv_text">Forgot password</string>
    <string name="forgot_password_tv_text">Forgot password</string>
    <string name="forgot_password_btn_text">Reset current password</string>
    <string name="validateToast_email_enter">Enter email address!</string>
    <string name="validateToast_password_enter">Enter password!</string>
    <string name="validateToast_password_short">Password too short, enter minimum 6 characters!</string>
    <string name="validateToast_displayname_enter">Enter User display name!</string>
    <string name="createAccount_progress_register">Registering user&#8230;</string>
    <string name="emailConfirmation_success">A confirmation letter has been sent to your e-mail address&#8230;</string>
    <string name="emailConfirmation_failed">Failed to send verification email&#8230;</string>
    <string name="createNewAccount_failed">Authentication failed.</string>
    <string name="userProfile_created">User profile created!</string>
    <string name="userProfile_notCreated">User profile not created!</string>
    <string name="fb_auth_exception_weakpassword">Error!!! The password is too weak (less than 6 characters) to create a new account!</string>
    <string name="fb_auth_exception_usercollision">Error!!! The email address is already in use by another account!</string>
    <string name="fb_auth_exception_invalidcredentials">Error!!! Check the correctness of the email address!</string>
    <string name="login_progress">Logging in user&#8230;</string>
    <string name="fb_auth_exception_login_invalid_user">The user account does not exist or has been disabled.</string>
    <string name="fb_auth_exception_login_invalid_credentials">Password is wrong!!!</string>
    <string name="fb_auth_exception_login_failed">Logging in failed!!!</string>
    <string name="profile_tv_text">Profile</string>
    <string name="display_name_profile_tv_text">Display Name</string>
    <string name="status_profile_tv_text">User Status</string>
    <string name="edit_profile_tv_text">Edit profile</string>
    <string name="phone_profile_tv">+7 999 012 34 56</string>
    <string name="email_profile_tv_text">user@email.me</string>
    <string name="firstname_tv_text">John</string>
    <string name="lastname_tv_text">Doe</string>
    <string name="onlyfordebug_tv">For Debug:</string>
    <string name="fb_uid_tv_text">Firebase UID:</string>
    <string name="fb_verified_tv_text">User Verified:</string>
    <string name="verified_tv_text">Verified?</string>
    <string name="fb_uid_text">UID</string>
    <string name="editprofile_toolbar_text">Edit</string>
</resources>
