<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hunternetLogin"
    tools:context="com.simbirsoft.itplace.efa.huntersnet.LoginActivity">

    <ImageView
        android:id="@+id/arrow_back_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/auth_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/auth_tv_text"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/arrow_back_iv"
        app:layout_constraintStart_toEndOf="@+id/arrow_back_iv"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/auth_tv_text" />

    <ImageView
        android:id="@+id/owl_iv"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_tv"
        app:srcCompat="@drawable/owl" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/loginFieldConstraintLayout"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginTop="240dp"
        android:background="@color/hunternetCL_login"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_textInputLayout"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_textInput_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:lineSpacingExtra="16sp"
                android:singleLine="true"
                android:text="@string/email_hint"
                android:textColor="@color/hunternet_textcolor"
                android:textSize="18sp"
                android:typeface="normal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_textInputLayout"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_textInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_textInput_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:lineSpacingExtra="16sp"
                android:singleLine="true"
                android:text="@string/password_hint"
                android:textColor="@color/hunternet_textcolor"
                android:textSize="18sp"
                android:typeface="normal" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:lineSpacingExtra="12sp"
            android:text="@string/register_tv_text"
            android:textAlignment="center"
            android:textColor="@color/hunternet_textcolor"
            android:textSize="12sp"
            android:typeface="normal"
            app:layout_constraintStart_toStartOf="@+id/password_textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/password_textInputLayout"
            tools:text="@string/register_tv_text" />

        <TextView
            android:id="@+id/forgot_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:lineSpacingExtra="12sp"
            android:text="@string/forgotpassword_tv_text"
            android:textAlignment="center"
            android:textColor="@color/hunternet_textcolor"
            android:textSize="12sp"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="@+id/password_textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/password_textInputLayout"
            tools:text="@string/forgotpassword_tv_text" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="56dp"
            android:background="@color/hunternet_button_correct"
            android:elevation="10dp"
            android:fontFamily="@font/roboto"
            android:lineSpacingExtra="16sp"
            android:text="@string/login_btn_text"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password_textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/password_textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/password_textInputLayout"
            tools:text="@string/login_btn_text" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
