<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/сreateAccountConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hunternetLogin"
    android:theme="@style/AppTheme"
    tools:context="com.simbirsoft.itplace.efa.huntersnet.CreateAccountActivity">

    <ImageView
        android:id="@+id/ca_arrow_back_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/create_account_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/ca_tv_text"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/ca_arrow_back_iv"
        app:layout_constraintStart_toEndOf="@+id/ca_arrow_back_iv"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/ca_tv_text" />

    <ImageView
        android:id="@+id/owl_iv"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_tv"
        app:srcCompat="@drawable/owl" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/createAccountFieldConstraintLayout"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginTop="240dp"
        android:background="@color/hunternetCL_login"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ca_email_textInputLayout"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ca_email_textInput_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ca_email_hint"
                android:inputType="textEmailAddress"
                android:lineSpacingExtra="16sp"
                android:singleLine="true"
                android:text="@string/ca_email_hint"
                android:textColor="@color/hunternet_textcolor"
                android:textSize="18sp"
                android:typeface="normal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ca_password_textInputLayout"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ca_email_textInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ca_password_textInput_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ca_password_hint"
                android:inputType="textPassword"
                android:lineSpacingExtra="16sp"
                android:singleLine="true"
                android:text="@string/ca_password_hint"
                android:textColor="@color/hunternet_textcolor"
                android:textSize="18sp"
                android:typeface="normal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ca_displayname_textInputLayout"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ca_password_textInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ca_displayname_textInput_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ca_displayname_hint"
                android:lineSpacingExtra="16sp"
                android:singleLine="true"
                android:text="@string/ca_displayname_hint"
                android:textColor="@color/hunternet_textcolor"
                android:textSize="18sp"
                android:typeface="normal" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/create_account_btn"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:background="@color/hunternet_button_correct"
            android:elevation="10dp"
            android:lineSpacingExtra="16sp"
            android:text="@string/ca_btn_text"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ca_password_textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/ca_password_textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/ca_displayname_textInputLayout" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
